--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@react-navigation/elements": "^2.8.3",
     "@react-navigation/native": "^7.1.21",
     "@react-navigation/native-stack": "^7.8.0",
+    "dayjs": "^1.11.19",
     "expo": "~54.0.25",
+    "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.5",
